# PyDepGraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test.db
docs/: README-ja.md  architecture.md  impact_analysis_use_cases.md  improvement_outline.md  improvement_outline_更に追加.md  logging_design.md  phase2_detailed_design.md  phase4_detailed_design.md  pyprolog_code2flow_output.gv  pyprolog_tach_output.json  system_design.md  user_guide.md
docs/analysis_sample/: function_dependencies.json  module_dependencies.json  prolog_mcp_functions.json
docs/improvement/: 1_dependency_analysis_enhancement.md  2_dependency_evolution_analysis.md  3_metrics_and_centrality_analysis.md
docs/old/: architecture.md  dependency_analyzer_requirements.md  detailed_design.md  logging_design.md  phase1_detailed_design.md  phase2_detailed_design.md  phase3_detailed_design.md  phase4_detailed_design.md  phase5_detailed_design.md  system_design.md
pydepgraph/: __init__.py  core.py
skills/: analyze-deps.md  find-by-role.md  find-impact.md  inspect-file.md  review-architecture.md  track-evolution.md  understand-module.md
src/pydepgraph/: __init__.py  cli.py  config.py  core.py  data_integrator.py  (+9 more)
tests/: test_analyze_idempotent_e2e.py  test_cli_database_config_safety.py  test_cli_evolution.py  test_cli_report.py  test_code2flow_real_execution.py  test_core_stable_ids.py  test_core_store_contains.py  test_inspect_features.py  test_integration.py  test_integration_pyprolog.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_project_scoped_replace.py
(+35 files in other folders)
